--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Demo GIT</title>
 </head>
 <body>
-    Título del body    
+    Título del body
+    <h1>Otro título</h1>
 </body>
 </html>
